tests/errors/lifetime/loan/shared_loan_blocks_mut_reborrow.sim

        extern fn read_ref(r: &i64);
        extern fn use_mut(r: &mut i64);
        fn f(x: i64) {
          r: &i64;
          s: &mut i64;
          entry:
            r = &x;
            s = &mut x;
            call read_ref(move r);
            call use_mut(move s);
            return
        }
        